design flattening complete

--- a/app/assets/stylesheets/components/common/_.scss
+++ b/app/assets/stylesheets/components/common/_.scss
@@ -14,7 +14,7 @@ $white: #F6F7F9;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  background: $off-white;
+  background: white;
   // background-image: url('http://stmedia.startribune.com/images/ows_138759385328271.jpg');
   // background-repeat: no-repeat;
   // background-size: cover;
@@ -30,7 +30,7 @@ $white: #F6F7F9;
   display: flex;
   justify-content: center;
   align-items: center;
-  background: $off-white;
+  background: white;
   overflow-y: scroll;
   font-family: 'Karla', sans-serif;
 }
