--- a/app/assets/stylesheets/components/pool/_.scss
+++ b/app/assets/stylesheets/components/pool/_.scss
@@ -11,7 +11,7 @@ $drk-text: #CDCDCD;
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  background: $off-white;
+  // background: $off-white;
 }
 
 .pool-standings {
