--- a/app/assets/stylesheets/components/pool/chat_box.scss
+++ b/app/assets/stylesheets/components/pool/chat_box.scss
@@ -8,7 +8,7 @@ $white: #F6F7F9;
   width: 100%;
   padding: 5px;
   background: white;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  // box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   font-family: 'Karla', sans-serif;
 
   h2 {
@@ -22,7 +22,7 @@ $white: #F6F7F9;
   }
 
   .message-container-container {
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    // box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     padding: 5px;
   }
 
