--- a/app/assets/stylesheets/components/pool/mod_board.scss
+++ b/app/assets/stylesheets/components/pool/mod_board.scss
@@ -3,7 +3,7 @@
   padding: 5px;
   margin-top: 10px;
   background: white;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  // box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 
   h2 {
     width: 100%;
@@ -18,7 +18,7 @@
   }
 
   .modboard-container-container {
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    // box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     padding: 5px;
 
   }
