--- a/app/assets/stylesheets/components/pool/chat_box.scss
+++ b/app/assets/stylesheets/components/pool/chat_box.scss
@@ -38,6 +38,7 @@ $white: #F6F7F9;
       span {
         font-size: 15px;
         text-decoration: underline;
+        color: #AF1E2C;
       }
     }
   }
@@ -72,7 +73,7 @@ $white: #F6F7F9;
     }
 
     .chat-form-button:hover {
-      color: red;
+      color: #AF1E2C;
     }
   }
 }
