--- a/app/assets/stylesheets/components/pool/mod_board.scss
+++ b/app/assets/stylesheets/components/pool/mod_board.scss
@@ -33,6 +33,7 @@
       margin: 2.5px 0px;
 
       span {
+        color: #AF1E2C;
         font-size: 15px;
         text-decoration: underline;
       }
