--- a/app/assets/stylesheets/components/home/_.scss
+++ b/app/assets/stylesheets/components/home/_.scss
@@ -26,12 +26,12 @@ $white: #F6F7F9;
 }
 
 .home-message {
+  margin: 5px;
   margin-bottom: 10px;
   padding: 5px;
-  padding-bottom: 5px;
   background: white;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  border-radius: 5px;
+  border-radius: 2px;
   display: flex;
   flex-direction: column;
   justify-content: center;
