--- a/app/assets/stylesheets/components/home/pool_list.scss
+++ b/app/assets/stylesheets/components/home/pool_list.scss
@@ -54,10 +54,19 @@ $white: #F6F7F9;
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   }
 
-  .pool-form {
-    // width: 100%;
+  .pool-create-form {
+    width: 50px;
     position: absolute;
     bottom: 5px;
+    left: -300px;
+    padding: 5px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    // display: none;
+  }
+
+  .pool-join-form {
+    position: absolute;
+    bottom: 100px;
     left: -100px;
     padding: 5px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
