--- a/app/assets/stylesheets/components/home/_.scss
+++ b/app/assets/stylesheets/components/home/_.scss
@@ -29,6 +29,7 @@ $white: #F6F7F9;
   margin: 5px;
   margin-bottom: 10px;
   padding: 5px;
+  padding-bottom: 0px;
   background: white;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   border-radius: 2px;
@@ -40,7 +41,7 @@ $white: #F6F7F9;
     width: 100%;
     // line-height: 20px;
     padding: 10px 5px;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
     font-size: 18px;
     line-height: 18px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
@@ -48,7 +49,8 @@ $white: #F6F7F9;
   }
 
   div {
-    padding: 10px 5px;
+    padding: 0px 5px;
+    padding-bottom: 10px;
     // box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     font-size: 15px;
   }
