--- a/app/assets/stylesheets/components/common/_.scss
+++ b/app/assets/stylesheets/components/common/_.scss
@@ -23,7 +23,7 @@ $white: #F6F7F9;
 
 .app-container {
   height: 100%;
-  min-height: 980px;
+  // min-height: 980px;
   width: 100%;
   min-width: 900px;
   padding-top: 50px;
