--- a/app/assets/stylesheets/components/home/_.scss
+++ b/app/assets/stylesheets/components/home/_.scss
@@ -8,10 +8,14 @@ $white: #F6F7F9;
 .home-container {
   height: 100%;
   // width: 50%;
-  padding: 10px 0px;
+  // padding: 10px 0px;
   display: flex;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
+}
+
+.home-body {
+  display: flex;
 }
 
 .home-left {
