pool list tweaks

--- a/app/assets/stylesheets/components/home/pool_list.scss
+++ b/app/assets/stylesheets/components/home/pool_list.scss
@@ -4,6 +4,30 @@ $drk-text: #CDCDCD;
 $off-white: #e9ebee;
 $white: #F6F7F9;
 
+@keyframes poolJoinIn {
+  0% {
+    opacity: 0;
+    left: -405px;
+  }
+
+  100% {
+    opacity: 1;
+    left: -205px;
+  }
+}
+
+@keyframes poolCreateIn {
+  0% {
+    opacity: 0;
+    left: -405;
+  }
+
+  100% {
+    opacity: 1;
+    left: -205px;
+  }
+}
+
 .pool-list {
   width: 100%;
   padding: 5px;
@@ -55,22 +79,107 @@ $white: #F6F7F9;
   }
 
   .pool-create-form {
-    width: 50px;
+    width: 200px;
     position: absolute;
     bottom: 5px;
-    left: -300px;
+    // left: -205px;
+    left: -405px;
     padding: 5px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    // display: none;
+
+    opacity: 0;
+    animation-name: poolJoinIn;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-out;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+
+    .pool-form-name {
+      height: 38px;
+      width: 100%;
+      margin-bottom: 5px;
+      padding-left: 5px;
+      border: .2px rgba(51, 51, 51,.2) solid;
+    }
+
+    .pool-form-input {
+      height: 38px;
+      width: 100%;
+      padding-left: 5px;
+      border: .2px rgba(51, 51, 51,.2) solid;
+    }
+
+    .pool-form-button {
+      width: 187px;
+      height: 36px;
+      margin: 0 auto;
+      margin-top: 5px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 15px;
+      line-height: 15px;
+      border-radius: 2px;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+      background: -webkit-gradient(linear, center bottom, center top, from(#F0EDE9), to(#FEFEFE));
+      transition: .2s;
+    }
+
+    .pool-form-button:hover {
+      color: #AF1E2C;
+    }
   }
 
   .pool-join-form {
+    width: 200px;
     position: absolute;
-    bottom: 100px;
-    left: -100px;
+    bottom: 44px;
+    // left: -205px;
+    left: -405px;
     padding: 5px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    // display: none;
+
+    opacity: 0;
+    animation-name: poolJoinIn;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-out;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+
+    .pool-form-name {
+      height: 38px;
+      width: 100%;
+      margin-bottom: 5px;
+      padding-left: 5px;
+      border: .2px rgba(51, 51, 51,.2) solid;
+    }
+
+    .pool-form-input {
+      height: 38px;
+      width: 100%;
+      padding-left: 5px;
+      border: .2px rgba(51, 51, 51,.2) solid;
+    }
+
+    .pool-form-button {
+      width: 187px;
+      height: 36px;
+      margin: 0 auto;
+      margin-top: 5px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 15px;
+      line-height: 15px;
+      border-radius: 2px;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+      background: -webkit-gradient(linear, center bottom, center top, from(#F0EDE9), to(#FEFEFE));
+      transition: .2s;
+    }
+
+    .pool-form-button:hover {
+      color: #AF1E2C;
+    }
   }
 
 }
