signup email field

--- a/app/assets/stylesheets/components/common/sign_in.scss
+++ b/app/assets/stylesheets/components/common/sign_in.scss
@@ -8,7 +8,7 @@
     align-items: flex-end;
     margin-bottom: 15px;
 
-    .auth-form-name, .auth-form-password {
+    .auth-form-name, .auth-form-password, .auth-form-email {
       width: 100%;
       padding: 5px;
       margin-bottom: 25px;
