--- a/app/assets/stylesheets/components/common/sign_in.scss
+++ b/app/assets/stylesheets/components/common/sign_in.scss
@@ -1,3 +1,6 @@
+$drk-primary: #1c1c1c;
+$lt-primary: #2d2d2d;
+
 .signup-container {
   width: 400px;
   font-size: 20px;
@@ -7,6 +10,7 @@
     flex-direction: column;
     align-items: flex-end;
     margin-bottom: 15px;
+
 
     .auth-form-name, .auth-form-password, .auth-form-email {
       width: 100%;
@@ -57,12 +61,15 @@
       align-items: center;
       border-radius: 2px;
       box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-      background: -webkit-gradient(linear, center bottom, center top, from(#F0EDE9), to(#FEFEFE));
-      transition: .2s;
+      transition: .3s;
+      background: $drk-primary;
+      color: white;
+      font-weight: bold;
     }
 
     .auth-form-button:hover {
-      color: #AF1E2C;
+      // color: black;
+      // background:
     }
   }
 
