--- a/app/assets/stylesheets/components/common/_.scss
+++ b/app/assets/stylesheets/components/common/_.scss
@@ -33,7 +33,8 @@ $white: #F6F7F9;
   align-items: center;
   background: white;
   overflow-y: scroll;
-  font-family: 'Karla', sans-serif;
+  // font-family: 'Karla', sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 .hidden {
