--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>MyOnlinePool</title>
-    <link href="https://fonts.googleapis.com/css?family=Baloo+Bhaina|Karla|Lobster|Montez|Montserrat" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Bhaina|Karla|Lobster|Montez|Montserrat|Open+Sans" rel="stylesheet">
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
