--- a/app/assets/stylesheets/components/common/sign_in.scss
+++ b/app/assets/stylesheets/components/common/sign_in.scss
@@ -1,5 +1,6 @@
 $drk-primary: #1c1c1c;
 $lt-primary: #2d2d2d;
+$drk-text: #CDCDCD;
 
 .signup-container {
   width: 400px;
@@ -55,21 +56,21 @@ $lt-primary: #2d2d2d;
     }
 
     .auth-form-button {
-      padding: 5px 20px;
+      padding: 10px 20px;
+      font-size: 15px;
       display: flex;
       justify-content: center;
       align-items: center;
       border-radius: 2px;
       box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
       transition: .3s;
-      background: $drk-primary;
+      background: $lt-primary;
       color: white;
       font-weight: bold;
     }
 
     .auth-form-button:hover {
-      // color: black;
-      // background:
+      color: $drk-text;
     }
   }
 
