--- a/app/assets/stylesheets/components/common/sign_in.scss
+++ b/app/assets/stylesheets/components/common/sign_in.scss
@@ -1,69 +1,126 @@
 .signup-container {
   width: 400px;
   font-size: 20px;
-
   .auth-form {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
     margin-bottom: 15px;
-
-    .auth-form-name, .auth-form-password {
+    .auth-form-name,
+    .auth-form-password {
       width: 100%;
       padding: 5px;
-      margin-bottom: 25px;
-      border-bottom: .2px rgba(51, 51, 51,.2) solid;
+      // margin-bottom: 25px;
+      border-bottom: .2px rgba(51, 51, 51, .2) solid;
     }
-
     .submit-row {
       width: 100%;
       padding-left: 5px;
       display: flex;
       justify-content: space-between;
     }
-
     .utility-row {
       font-size: 12px;
       width: 100%;
       padding-left: 5px;
       display: flex;
       flex-direction: column;
-
       .utility-item {
         margin-top: 10px;
       }
     }
-
     .reroute {
       font-size: 12px;
       display: flex;
-      align-items: center;
-      // padding: 5px;
-
+      align-items: center; // padding: 5px;
       span {
         margin-left: 3px;
         text-decoration: underline;
       }
-
       span:hover {
         color: #AF1E2C;
       }
     }
-
     .auth-form-button {
       padding: 5px 20px;
       display: flex;
       justify-content: center;
       align-items: center;
       border-radius: 2px;
-      box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
       background: -webkit-gradient(linear, center bottom, center top, from(#F0EDE9), to(#FEFEFE));
       transition: .2s;
     }
-
     .auth-form-button:hover {
       color: #AF1E2C;
     }
   }
+}
 
+.authform-group {
+  position: relative;
+  margin-bottom: 45px;
+  width: 100%;
+
+  input {
+    font-size: 18px;
+    padding: 10px 10px 10px 5px;
+    display: block;
+    width: 300px;
+    border: none;
+    border-bottom: 1px solid #757575;
+
+
+    &:focus {
+      outline: none;
+    }
+  }
+
+  label {
+    color: #999;
+    font-size: 22px;
+    font-weight: normal;
+    position: absolute;
+    pointer-events: none;
+    left: 5px;
+    top: 8px;
+    transition: 0.2s ease all;
+  }
+
+  input:focus~label,
+  input:valid~label {
+    top: -20px;
+    font-size: 14px;
+    color: #5264AE;
+  }
+
+  .bar {
+    position: relative;
+    display: block;
+    width: 100%;
+  }
+
+  .bar:before, .bar:after {
+    content: '';
+    height: 2px;
+    width: 0;
+    bottom: 1px;
+    position: absolute;
+    background: #5264AE;
+    transition: 0.2s ease all;
+    -moz-transition: 0.2s ease all;
+    -webkit-transition: 0.2s ease all;
+  }
+
+  .bar:before {
+    left: 50%;
+  }
+
+  .bar:after {
+    right: 50%;
+  }
+
+  input:focus~.bar:before, input:focus~.bar:after {
+    width: 50%;
+  }
 }
