remove unecessary files, update scss file name

--- a/app/assets/stylesheets/components/common/_.scss
+++ b/app/assets/stylesheets/components/common/_.scss
@@ -4,7 +4,7 @@ $drk-text: #CDCDCD;
 $off-white: #e9ebee;
 $white: #F6F7F9;
 @import "standings_box";
-@import "sign_in";
+@import "authform";
 
 .relative-content {
   height: 100vh;
