--- a/app/assets/stylesheets/components/common/standings_box.scss
+++ b/app/assets/stylesheets/components/common/standings_box.scss
@@ -1,8 +1,6 @@
 $off-white: #e9ebee;
 
 .standings-box {
-  margin-bottom: 10px;
-  margin-left: 10px;
   padding: 5px;
   padding-top: 20px;
   border-radius: 5px;
@@ -66,8 +64,9 @@ $off-white: #e9ebee;
   display: flex;
   margin-top: 10px;
   padding: 5px;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  background:-webkit-gradient(linear, center bottom, center top, from(#F0EDE9), to(#FEFEFE));
+  font-weight: bold;
+  // box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  // background:-webkit-gradient(linear, center bottom, center top, from(#F0EDE9), to(#FEFEFE));
 
   .title, .pool {
     width: 125px;
