--- a/app/assets/stylesheets/components/pool/_.scss
+++ b/app/assets/stylesheets/components/pool/_.scss
@@ -8,24 +8,38 @@ $drk-text: #CDCDCD;
 .pool-container {
   height: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  // background: $off-white;
-}
-
-.pool-body {
-  display: flex;
 }
 
 .pool-standings {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  margin-bottom: 25px;
+
+  div:first-child {
+    margin-right: 15px;
+  }
+
+  div:last-child {
+    margin-left: 15px;
+  }
+
+  .standings-box {
+    div:first-child {
+      margin-right: 0px;
+    }
+    div:last-child {
+      margin-left: 0px;
+    }
+  }
 }
 
 .pool-coms {
-  width: 300px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: center;
 }
 
 .pool-message {
