--- a/app/assets/stylesheets/components/common/standings_box.scss
+++ b/app/assets/stylesheets/components/common/standings_box.scss
@@ -2,23 +2,19 @@ $off-white: #e9ebee;
 
 .standings-box {
   padding: 5px;
-  padding-top: 20px;
-  border-radius: 5px;
-  background: white;
+  padding-top: 30px;
+  // border-radius: 5px;
+  // background: white;
   // box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   position: relative;
 
   .standings-box-title {
-      position: absolute;
-      top: 2px;
-      left: 2px;
-      padding-left: 5px;
-      padding-top: 5px;
-      line-height: 15px;
-      width: 100%;
-      text-align: left;
-      font-size: 15px;
-      opacity: .5;
+    position: absolute;
+    top: 0px;
+    left: 5px;
+    font-size: 20px;
+    text-align: left;
+    opacity: .5;
   }
 
   div:nth-child(3) {
