--- a/app/assets/stylesheets/components/home/pool_list.scss
+++ b/app/assets/stylesheets/components/home/pool_list.scss
@@ -32,28 +32,33 @@ $white: #F6F7F9;
   width: 420px;
   position: relative;
   border-radius: 5px;
-  // box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  padding-top: 30px;
 
   .pool-list-top-item {
-    padding: 10px 5px;
-    font-size: 18px;
-    line-height: 18px;
-    // box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    // background:-webkit-gradient(linear, center bottom, center top, from(#F0EDE9), to(#FEFEFE))
+    position: absolute;
+    top: 0px;
+    left: 5px;
+    font-size: 20px;
+    text-align: left;
+    opacity: .5;
   }
 
   .pool-list-item {
-    width: 100%;
+    // width: 100%;
     // box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     transition: .25s;
-    margin-top: 5px;
+    // margin-top: 5px;
     padding-left: 5px;
 
     div {
       width: 100%;
       padding: 10px 5px;
-      font-size: 15px;
+      // font-size: 15px;
       cursor: pointer;
+    }
+
+    i {
+      margin-right: 5px;
     }
   }
 
