--- a/app/assets/stylesheets/components/splash/_.scss
+++ b/app/assets/stylesheets/components/splash/_.scss
@@ -60,13 +60,13 @@ $drk-text: #CDCDCD;
   h1 {
     font-size: 40px;
     opacity: 1;
-
+    margin-bottom: 25px;
   }
 
   p {
     text-align: center;
     font-size: 20px;
-    line-height: 25px;
+    line-height: 35px;
 
     margin-left: 100px;
     opacity: 0;
@@ -121,18 +121,16 @@ $drk-text: #CDCDCD;
     display: flex;
     justify-content: center;
     align-items: center;
-    background: $off-white;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    border-radius: 2px;
+    // background: $off-white;
+    // box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 
     img {
       margin: 0px 10px;
-      padding: 5px;
       width: 90px;
       height: 90px;
-      border-radius: 2px;
-      background: $off-white;
-      box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+      border-radius: 25%;
+      // background: $off-white;
+      // box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     }
 
     .shield {
@@ -179,6 +177,7 @@ $drk-text: #CDCDCD;
 
   h1 {
     font-size: 30px;
+    margin-bottom: 25px;
   }
 
   .splash-bottom-body {
@@ -190,6 +189,7 @@ $drk-text: #CDCDCD;
     p {
       text-align: center;
       font-size: 20px;
+      margin: 5px 0px;
     }
   }
 }
