--- a/app/assets/stylesheets/components/home/pool_list.scss
+++ b/app/assets/stylesheets/components/home/pool_list.scss
@@ -29,7 +29,9 @@ $white: #F6F7F9;
 }
 
 .pool-list {
-  width: 420px;
+  margin: auto 0;
+  width: 870px;
+  padding: 0px 5px;
   position: relative;
   border-radius: 5px;
   padding-top: 30px;
