--- a/app/assets/stylesheets/components/pool/mod_board.scss
+++ b/app/assets/stylesheets/components/pool/mod_board.scss
@@ -28,14 +28,19 @@
     overflow-y: auto;
 
     .modboard-item {
-      font-size: 12px;
-      line-height: 15px;
-      margin: 2.5px 0px;
+      margin-bottom: 10px;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
 
-      span {
-        color: #AF1E2C;
+      .author {
         font-size: 15px;
-        text-decoration: underline;
+        font-weight: bold;
+        margin-bottom: 5px;
+      }
+
+      .message {
+        font-size: 12px;
       }
     }
   }
