--- a/app/assets/stylesheets/components/pool/_.scss
+++ b/app/assets/stylesheets/components/pool/_.scss
@@ -7,16 +7,43 @@ $drk-text: #CDCDCD;
 
 .pool-container {
   height: 100%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
+.pool-bulletin {
+  height: 300px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  .modboard {
+    width: 870px;
+  }
+}
+
 .pool-standings {
+  width: 100%;
+  height: 431px;
+  // padding: 20px 0px;
   display: flex;
   flex-direction: row;
-  margin-bottom: 25px;
+  justify-content: center;
+  align-items: center;
+  background: $lt-primary;
+
+  .standings-box {
+    font-size: 12px;
+    color: white;
+    .standings-box-top-item{
+      font-size: 14px;
+      font-weight: bold;
+    }
+  }
 
   div:first-child {
     margin-right: 15px;
@@ -37,9 +64,12 @@ $drk-text: #CDCDCD;
 }
 
 .pool-coms {
+  height: 431px;
+  padding: 20px 0px;
   display: flex;
   flex-direction: row;
   justify-content: center;
+
 }
 
 .pool-message {
