--- a/app/assets/stylesheets/components/pool/chat_box.scss
+++ b/app/assets/stylesheets/components/pool/chat_box.scss
@@ -5,12 +5,9 @@ $off-white: #e9ebee;
 $white: #F6F7F9;
 
 .chat-box {
-  width: 420px;
-  margin-right: 15px;
+  width: 870px;
   padding: 0px 5px;
   padding-top: 30px;
-  // padding: 5px;
-  // background: white;
   font-family: 'Karla', sans-serif;
   position: relative;
 
@@ -28,18 +25,23 @@ $white: #F6F7F9;
   }
 
   .message-container {
-    height: 200px;
+    height: 300px;
     overflow-y: auto;
 
     .chat-box-item {
-      font-size: 12px;
-      line-height: 15px;
-      margin: 2.5px 0px;
+      margin-bottom: 10px;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
 
-      span {
+      .author {
         font-size: 15px;
-        text-decoration: underline;
-        color: #AF1E2C;
+        font-weight: bold;
+        margin-bottom: 5px;
+      }
+
+      .message {
+        font-size: 12px;
       }
     }
   }
