--- a/app/assets/stylesheets/components/pool/chat_box.scss
+++ b/app/assets/stylesheets/components/pool/chat_box.scss
@@ -47,20 +47,21 @@ $white: #F6F7F9;
   }
 
   .chat-form {
-    margin-top: 5px;
+    // margin-bottom: 10px;
     width: 100%;
     display: flex;
 
     .chat-input {
       height: 30px;
-      width: 80%;
+      width: 85%;
       padding-left: 5px;
       border-bottom: .2px rgba(51, 51, 51,.2) solid;
       font-size: 15px;
     }
 
     .chat-form-button {
-      width: 20%;
+      width: 15%;
+      // padding: 10px 20px;
       height: 30px;
       margin-left: 5px;
       margin-bottom: 1px;
@@ -71,8 +72,22 @@ $white: #F6F7F9;
       line-height: 12px;
       border-radius: 2px;
       box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-      background: -webkit-gradient(linear, center bottom, center top, from(#F0EDE9), to(#FEFEFE));
+      background: $lt-primary;
       transition: .2s;
+      color: white;
+
+      // padding: 10px 20px;
+      // font-size: 15px;
+      // display: flex;
+      // justify-content: center;
+      // align-items: center;
+      // border-radius: 2px;
+      // box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+      // transition: .3s;
+      // background: $lt-primary;
+      // color: white;
+      // font-weight: bold;
+      // margin-bottom: 5px;
     }
 
     .chat-form-button:hover {
