style refactor complete

--- a/app/assets/stylesheets/components/common/standings_box.scss
+++ b/app/assets/stylesheets/components/common/standings_box.scss
@@ -1,7 +1,7 @@
 $off-white: #e9ebee;
 
 .standings-box {
-  padding: 5px;
+  // padding: 5px;
   padding-top: 30px;
   // border-radius: 5px;
   // background: white;
