--- a/app/assets/stylesheets/components/pool/chat_box.scss
+++ b/app/assets/stylesheets/components/pool/chat_box.scss
@@ -14,7 +14,7 @@ $white: #F6F7F9;
   h2 {
     position: absolute;
     top: 0px;
-    left: 5px;
+    left: 10px;
     font-size: 20px;
     text-align: left;
     opacity: .5;
@@ -50,20 +50,26 @@ $white: #F6F7F9;
     // margin-bottom: 10px;
     width: 100%;
     display: flex;
+    flex-direction: column;
 
     .chat-input {
       height: 30px;
-      width: 85%;
+      width: 100%;
       padding-left: 5px;
       border-bottom: .2px rgba(51, 51, 51,.2) solid;
       font-size: 15px;
     }
 
+    .chat-form-button-row {
+      display: flex;
+      justify-content: flex-end;
+    }
+
     .chat-form-button {
+      height: 30px;
+      margin-top: 5px;
       width: 15%;
       // padding: 10px 20px;
-      height: 30px;
-      margin-left: 5px;
       margin-bottom: 1px;
       display: flex;
       justify-content: center;
