--- a/app/assets/stylesheets/components/pool/_.scss
+++ b/app/assets/stylesheets/components/pool/_.scss
@@ -10,12 +10,13 @@ $drk-text: #CDCDCD;
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  justify-content: flex-start;
+  // justify-content: center;
+  // align-items: center;
 }
 
 .pool-bulletin {
-  height: 300px;
+  min-height: 300px;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -24,11 +25,15 @@ $drk-text: #CDCDCD;
   .modboard {
     width: 870px;
   }
+
+  .modboard-container {
+    height: 200px;
+  }
 }
 
 .pool-standings {
   width: 100%;
-  height: 431px;
+  min-height: 431px;
   // padding: 20px 0px;
   display: flex;
   flex-direction: row;
@@ -64,7 +69,7 @@ $drk-text: #CDCDCD;
 }
 
 .pool-coms {
-  height: 431px;
+  min-height: 431px;
   padding: 20px 0px;
   display: flex;
   flex-direction: row;
