--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -33,8 +33,8 @@ html {
   // font-family: 'Karla', sans-serif;
   // font-family: 'Montserrat', sans-serif;
   // font-family: 'Montez', cursive;
-  font-family: 'Baloo Bhaina', cursive;
   // font-family: 'Lobster', cursive;
+  font-family: 'Open Sans', sans-serif;
 }
 
 /******************************/
