--- a/app/assets/stylesheets/components/footer/_.scss
+++ b/app/assets/stylesheets/components/footer/_.scss
@@ -14,8 +14,8 @@ $drk-text: #CDCDCD;
   border-top: 15px solid $lt-primary;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 
-  p {
-    height: 100%;
+  div {
+    height: 35px;
     padding: 0px 40px;
     display: flex;
     justify-content: center;
