--- a/app/assets/stylesheets/components/home/_.scss
+++ b/app/assets/stylesheets/components/home/_.scss
@@ -4,6 +4,7 @@ $drk-text: #CDCDCD;
 $off-white: #e9ebee;
 $white: #F6F7F9;
 @import "pool_list";
+@import "create_pool_form";
 
 .home-container {
   height: 100%;
