--- a/app/assets/stylesheets/components/navbar/_.scss
+++ b/app/assets/stylesheets/components/navbar/_.scss
@@ -53,6 +53,7 @@ $drk-text: #CDCDCD;
   justify-content: center;
   align-items: center;
   color: black;
+  background: white;
   // background-color: $drk-primary;
   // border-bottom: 15px solid $lt-primary;
   // box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
