--- a/app/assets/stylesheets/components/common/_.scss
+++ b/app/assets/stylesheets/components/common/_.scss
@@ -8,11 +8,11 @@ $white: #F6F7F9;
 
 .base-wrapper {
   height: 100vh;
-  min-height: 950px;;
-  min-width: 900px;
+  // min-height: 950px;
+  // min-width: 900px;
   display: flex;
   justify-content: center;
-  align-items: flex-end;
+  // align-items: flex-end;
   // background-image: url('http://www.csnbayarea.com/sites/csnbayarea/files/2016/11/28/nfl-logo.jpg');
   // background-image: url('http://cdn.pcwallart.com/images/blue-gradient-texture-wallpaper-3.jpgg');
   // background-repeat: no-repeat;
@@ -24,23 +24,20 @@ $white: #F6F7F9;
 
 .base-container {
   height: 100%;
+  // min-height: 950px;
   width: 85%;
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-  // height: 95%;
-  // width: 100%;
-  // margin-top: 5%;
-  // min-height: 1080px;
-  // position: relative;
+
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  background: white;
+  // background: white;
 
   .backdrop {
     position: absolute;
     // left: 0px;
-    top: 50px;
+    // top: 50px;
     height: 100%;
     width: 85%;;
   }
@@ -49,7 +46,7 @@ $white: #F6F7F9;
 .app-container {
   position: relative;
   height: 100%;
-  // min-height: 750px;
+  min-height: 750px;
   width: 100%;
   min-width: 900px;
   margin-top: 50px;
