--- a/app/assets/stylesheets/components/common/authform.scss
+++ b/app/assets/stylesheets/components/common/authform.scss
@@ -46,10 +46,12 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      border-radius: 2px;
+      border-radius: 3px;
       box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-      background: -webkit-gradient(linear, center bottom, center top, from(#F0EDE9), to(#FEFEFE));
+      // background: -webkit-gradient(linear, center bottom, center top, from(#F0EDE9), to(#FEFEFE));
+      background: black;
       transition: .2s;
+      color: white;
     }
     .auth-form-button:hover {
       color: #AF1E2C;
