--- a/app/assets/stylesheets/components/navbar/_.scss
+++ b/app/assets/stylesheets/components/navbar/_.scss
@@ -54,6 +54,8 @@ $drk-text: #CDCDCD;
   align-items: center;
   color: black;
   background: white;
+  box-shadow: inset 0px 4px 8px -3px rgba(17, 17, 17, .06);
+  // background: #e5e5e4;
   // background-color: $drk-primary;
   // border-bottom: 15px solid $lt-primary;
   // box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
@@ -63,13 +65,13 @@ $drk-text: #CDCDCD;
   .title {
     // height: 100%;
     // padding: 0px 40px;
-    padding-top: 15px;
+    padding-top: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 30px;
     font-weight: bold;
-    font-family: 'Baloo Bhaina', cursive;
+    // font-family: 'Baloo Bhaina', cursive;
     // background-color: $lt-primary;
     // box-shadow: -8px 0px 5px -5px rgba(0,0,0,0.16), 8px 0px 5px -5px rgba(0,0,0,0.16);
   }
