--- a/app/assets/stylesheets/components/navbar/account_dropdown.scss
+++ b/app/assets/stylesheets/components/navbar/account_dropdown.scss
@@ -13,12 +13,12 @@ $drk-text: #CDCDCD;
 }
 
 .account-dropdown {
-  color: $drk-text;
+  color: black;
   z-index: 2;
   position: absolute;
   // box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   opacity: 0;
-  top: 45px;
+  top: 50px;
   right: 99px;
 
   animation-name: slideIn;
