--- a/app/assets/stylesheets/components/common/_.scss
+++ b/app/assets/stylesheets/components/common/_.scss
@@ -8,6 +8,7 @@ $white: #F6F7F9;
 
 .base-wrapper {
   height: 100vh;
+  padding-top: 2%;
   // min-height: 950px;
   // min-width: 900px;
   display: flex;
@@ -25,7 +26,7 @@ $white: #F6F7F9;
 .base-container {
   height: 100%;
   // min-height: 950px;
-  width: 85%;
+  width: 95%;
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 
   display: flex;
