--- a/app/assets/stylesheets/components/common/_.scss
+++ b/app/assets/stylesheets/components/common/_.scss
@@ -7,8 +7,10 @@ $white: #F6F7F9;
 @import "authform";
 
 .base-wrapper {
-  height: 100vh;
-  padding-top: 2%;
+  height: 100%;
+  padding-bottom: 2.5%;
+  padding-left: 2.5%;
+  padding-right: 2.5%;
   // min-height: 950px;
   // min-width: 900px;
   display: flex;
@@ -26,7 +28,7 @@ $white: #F6F7F9;
 .base-container {
   height: 100%;
   // min-height: 950px;
-  width: 95%;
+  width: 100%;
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 
   display: flex;
@@ -48,21 +50,16 @@ $white: #F6F7F9;
 .app-container {
   position: relative;
   height: 100%;
-  // min-height: 750px;
   width: 100%;
   min-width: 900px;
   padding-top: 60px;
-  // padding-top: 20px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  // background: white;
-  overflow-y: scroll;
-  // font-family: 'Karla', sans-serif;
+  // overflow-y: scroll;
   font-family: 'Open Sans', sans-serif;
-
-
+  background: white;
 }
 
 .hidden {
