--- a/app/assets/stylesheets/components/splash/_.scss
+++ b/app/assets/stylesheets/components/splash/_.scss
@@ -32,9 +32,10 @@ $drk-text: #CDCDCD;
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   background: $lt-primary;
+  // overflow-y: scroll;
 }
 
 .splash-top {
