--- a/app/assets/stylesheets/components/common/authform.scss
+++ b/app/assets/stylesheets/components/common/authform.scss
@@ -1,11 +1,15 @@
 .signup-container {
-  width: 400px;
-  font-size: 20px;
+  min-height: 850px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   .auth-form {
+    width: 400px;
+    font-size: 20px;
+    margin-bottom: 15px;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    margin-bottom: 15px;
     .auth-form-name,
     .auth-form-password {
       width: 100%;
