--- a/app/assets/stylesheets/components/home/create_pool_form.scss
+++ b/app/assets/stylesheets/components/home/create_pool_form.scss
@@ -1,3 +1,10 @@
+.pool-form-container {
+  height: 850px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .pool-form {
   width: 400px;
   font-size: 20px;
