--- a/app/assets/stylesheets/components/navbar/_.scss
+++ b/app/assets/stylesheets/components/navbar/_.scss
@@ -1,9 +1,6 @@
 $drk-primary: #1c1c1c;
 $lt-primary: #2d2d2d;
 $drk-text: #CDCDCD;
-@import "account_dropdown";
-@import "settings_dropdown";
-@import "pool_dropdown";
 
 @keyframes barsIn {
   0% {
@@ -122,4 +119,57 @@ $drk-text: #CDCDCD;
       // margin-top: 5px;
     }
   }
+}
+
+@keyframes slideIn {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+.navbar-dropdown {
+  color: black;
+  z-index: 2;
+  position: absolute;
+  background: #fff;
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  opacity: 0;
+  top: 60px;
+  left: 0px;
+  padding: 0 75px;
+
+  animation-name: slideIn;
+  animation-iteration-count: 1;
+  animation-timing-function: ease-out;
+  animation-duration: .5s;
+  animation-fill-mode: forwards;
+}
+
+.navbar-dropdown-list {
+
+  // padding-bottom: 15px;
+  display: flex;
+  flex-direction: column;
+  font-size: 15px;
+  font-weight: bold;
+  // background-color: $lt-primary;
+
+  a, Link {
+    // background-color: $lt-primary;
+    text-align: left;
+    width: 100%;
+    padding: 10px 0px;
+    transition: .5s;
+    cursor: pointer;
+  }
+
+  a:hover, Link:hover {
+    // background-color: white;
+    color: red;
+  }
+
 }
