--- a/app/assets/stylesheets/components/navbar/_.scss
+++ b/app/assets/stylesheets/components/navbar/_.scss
@@ -140,7 +140,8 @@ $drk-text: #CDCDCD;
   opacity: 0;
   top: 60px;
   left: 0px;
-  padding: 0 75px;
+  width: 220px;
+  box-sizing: border-box;
 
   animation-name: slideIn;
   animation-iteration-count: 1;
@@ -158,17 +159,18 @@ $drk-text: #CDCDCD;
   font-weight: bold;
   // background-color: $lt-primary;
 
-  a, Link {
+  a {
     // background-color: $lt-primary;
+    padding: 10px 40px;
     text-align: left;
     width: 100%;
-    padding: 10px 0px;
     transition: .5s;
     cursor: pointer;
+    width: 100%;
   }
 
-  a:hover, Link:hover {
-    // background-color: white;
+  a:hover {
+    background-color: #ddd;
     color: red;
   }
 
