--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,12 @@
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
+
+    <% if user_signed_in? %>
+      <script type="text/javascript">
+        window.currentUser = <%= render("api/sessions/user", formats: [:json], user: current_user).html_safe %>
+      </script>
+    <% end %>
   </head>
 
   <body>
