--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,9 @@
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
 
-    <% if user_signed_in? %>
+    <% if signed_in? %>
       <script type="text/javascript">
-        window.currentUser = <%= render("api/sessions/user", formats: [:json], user: current_user).html_safe %>
+        window.currentUser = <%= render("user.json.jbuilder", formats: [:json], user: current_user).html_safe %>
       </script>
     <% end %>
   </head>
