--- a/app/assets/stylesheets/components/common/_.scss
+++ b/app/assets/stylesheets/components/common/_.scss
@@ -7,57 +7,36 @@ $white: #F6F7F9;
 @import "authform";
 
 .base-wrapper {
-  height: 100%;
-  padding-bottom: 2.5%;
+  height: 100vh;
   padding-left: 2.5%;
   padding-right: 2.5%;
-  // min-height: 950px;
-  // min-width: 900px;
   display: flex;
   justify-content: center;
-  // align-items: flex-end;
-  // background-image: url('http://www.csnbayarea.com/sites/csnbayarea/files/2016/11/28/nfl-logo.jpg');
-  // background-image: url('http://cdn.pcwallart.com/images/blue-gradient-texture-wallpaper-3.jpgg');
-  // background-repeat: no-repeat;
-  // background-size: cover;
-  // background-attachment: fixed;
-  // background:-webkit-gradient(linear, center bottom, center top, from(#105b9e), to(#82C6F5));
   background: #e5e5e4;
 }
 
 .base-container {
-  height: 100%;
-  // min-height: 950px;
+  min-height: 100%;
   width: 100%;
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
   background: white;
-
-  svg {
-    display: none;
-    position: absolute;
-    // left: 0px;
-    // top: 50px;
-    height: 100%;
-    width: 85%;
-  }
 }
 
 .app-container {
   position: relative;
-  height: 100%;
   width: 100%;
   min-width: 900px;
+  min-height: 950px;
   padding-top: 60px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  // overflow-y: scroll;
+  overflow-y: scroll;
   font-family: 'Open Sans', sans-serif;
   background: white;
 }
