--- a/app/assets/stylesheets/components/home/_.scss
+++ b/app/assets/stylesheets/components/home/_.scss
@@ -22,10 +22,9 @@ $white: #F6F7F9;
   display: flex;
   justify-content: center;
   align-items: center;
+  background: $lt-primary;
 
   .modboard {
-    width: 870px;
-
     .modboard-container {
       height: 340px;
     }
@@ -40,11 +39,11 @@ $white: #F6F7F9;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  background: $lt-primary;
+  // background: $lt-primary;
 
   .standings-box {
     font-size: 12px;
-    color: white;
+    // color: white;
     .standings-box-top-item{
       font-size: 14px;
       font-weight: bold;
@@ -75,6 +74,7 @@ $white: #F6F7F9;
   display: flex;
   flex-direction: row;
   justify-content: center;
+  // background: $lt-primary;
 }
 
 .home-message {
