--- a/app/assets/stylesheets/components/navbar/_.scss
+++ b/app/assets/stylesheets/components/navbar/_.scss
@@ -46,7 +46,6 @@ $drk-text: #CDCDCD;
   height: 60px;
   width: 95%;
   min-width: 900px;
-  // padding: 0px 100px;
   position: fixed;
   display: flex;
   justify-content: center;
@@ -54,18 +53,12 @@ $drk-text: #CDCDCD;
   color: black;
   background: white;
   box-shadow: inset 0px 4px 8px -3px rgba(17, 17, 17, .06);
-  // background: #e5e5e4;
-  // background-color: $drk-primary;
-  // border-bottom: 15px solid $lt-primary;
-  // box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   z-index: 100;
-  // font-family: 'Baloo Bhaina', cursive;
 
   .title {
     position: absolute;
     left: 75px;
-    // width: 900px;
-    // padding-left: 10px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -73,9 +66,6 @@ $drk-text: #CDCDCD;
     font-weight: bold;
     cursor: pointer;
     transition: .5s;
-    // font-family: 'Baloo Bhaina', cursive;
-    // background-color: $lt-primary;
-    // box-shadow: -8px 0px 5px -5px rgba(0,0,0,0.16), 8px 0px 5px -5px rgba(0,0,0,0.16);
 
     &:hover {
       color: red;
