--- a/app/assets/stylesheets/components/pool/mod_board.scss
+++ b/app/assets/stylesheets/components/pool/mod_board.scss
@@ -1,8 +1,16 @@
+$drk-primary: #1c1c1c;
+$lt-primary: #2d2d2d;
+$drk-text: #CDCDCD;
+$off-white: #e9ebee;
+$white: #F6F7F9;
+
 .modboard {
-  // width: 420px;
+  width: 870px;
   padding: 0px 5px;
   padding-top: 30px;
   position: relative;
+  background: $lt-primary;
+  color: white;
 
   h2 {
     // width: 100%;
@@ -24,6 +32,7 @@
 
   .modboard-container {
     height: 150px;
+    width: 100%;
     overflow-y: auto;
 
     .modboard-item {
