--- a/app/assets/stylesheets/components/pool/_.scss
+++ b/app/assets/stylesheets/components/pool/_.scss
@@ -11,36 +11,28 @@ $drk-text: #CDCDCD;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  // justify-content: center;
-  // align-items: center;
 }
 
 .pool-bulletin {
-  min-height: 300px;
+  min-height: 327px;
   width: 100%;
+  padding: 20px 0px;
   display: flex;
   justify-content: center;
   align-items: center;
   background: $lt-primary;
-
-  .modboard-container {
-    height: 200px;
-  }
 }
 
 .pool-standings {
   width: 100%;
   min-height: 431px;
-  // padding: 20px 0px;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  // background: $lt-primary;
 
   .standings-box {
     font-size: 12px;
-    // color: white;
     .standings-box-top-item{
       font-size: 14px;
       font-weight: bold;
@@ -71,7 +63,6 @@ $drk-text: #CDCDCD;
   display: flex;
   flex-direction: row;
   justify-content: center;
-  // background: $lt-primary;
 }
 
 .pool-message {
