--- a/app/assets/stylesheets/components/pool/mod_board.scss
+++ b/app/assets/stylesheets/components/pool/mod_board.scss
@@ -5,35 +5,35 @@ $off-white: #e9ebee;
 $white: #F6F7F9;
 
 .modboard {
+  height: 287px;
   width: 870px;
   padding: 0px 5px;
   padding-top: 30px;
   position: relative;
   background: $lt-primary;
   color: white;
+  overflow-y: hidden;
 
   h2 {
     // width: 100%;
     position: absolute;
     top: 0px;
-    left: 10px;
+    // left: 10px;
     font-size: 20px;
     text-align: left;
     opacity: .5;
-    // box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    // background:-webkit-gradient(linear, center bottom, center top, from(#F0EDE9), to(#FEFEFE));
   }
 
   .modboard-container-container {
-    // box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     padding: 5px;
-
+    overflow-y: hidden;
   }
 
   .modboard-container {
-    height: 150px;
+    // height: 150px;
+    // height: 100%;
     width: 100%;
-    overflow-y: auto;
+    overflow-y: hidden;
 
     .modboard-item {
       margin-bottom: 10px;
