chat box scrolling removed

--- a/app/assets/stylesheets/components/common/standings_box.scss
+++ b/app/assets/stylesheets/components/common/standings_box.scss
@@ -11,6 +11,7 @@ $off-white: #e9ebee;
     font-size: 20px;
     text-align: left;
     opacity: .5;
+    font-weight: bold;
   }
 
   div:nth-child(3) {
