--- a/app/assets/stylesheets/components/pool/mod_board.scss
+++ b/app/assets/stylesheets/components/pool/mod_board.scss
@@ -15,13 +15,12 @@ $white: #F6F7F9;
   overflow-y: hidden;
 
   h2 {
-    // width: 100%;
     position: absolute;
     top: 0px;
-    // left: 10px;
     font-size: 20px;
     text-align: left;
     opacity: .5;
+    font-weight: bold;
   }
 
   .modboard-container-container {
