disable sign in/up button if form is not valid

--- a/app/assets/stylesheets/components/common/authform.scss
+++ b/app/assets/stylesheets/components/common/authform.scss
@@ -60,6 +60,14 @@
     .auth-form-button:hover {
       color: #AF1E2C;
     }
+
+    .auth-form-button:disabled {
+      cursor: not-allowed;
+
+      &:hover {
+        color: white;
+      }
+    }
   }
 }
 
